--- a/SMPv2/app/src/main/res/layout/list_promotions.xml
+++ b/SMPv2/app/src/main/res/layout/list_promotions.xml
@@ -23,6 +23,7 @@ android:layout_height="match_parent">
             android:layout_height="match_parent"
             android:fontFamily="@font/theboldfont"
             android:textSize="18sp"
+            android:theme="@style/TextViewHeaderDefault"
             android:layout_marginBottom="10dp"/>
 
         <TextView
