--- a/SMPv2/app/src/main/res/values/styles.xml
+++ b/SMPv2/app/src/main/res/values/styles.xml
@@ -9,19 +9,6 @@
 
     </style>
 
-    <style name="font" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:fontFamily">@font/theboldfont</item>
-        <item name="fontFamily">@font/theboldfont</item>
-        <item name="android:textStyle">normal</item>
-    </style>
-
-    <style name="listViewFont" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:fontFamily">@font/theboldfont</item>
-        <item name="fontFamily">@font/theboldfont</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:textSize">23dp</item>
-    </style>
-
     <style name="ToolbarTheme" parent="ThemeOverlay.AppCompat.Light">
         <item name="android:fontFamily">@font/theboldfont</item>
         <item name="android:actionOverflowButtonStyle">@style/OverFlow</item>
@@ -30,4 +17,54 @@
     <style name="OverFlow" parent="@android:style/Widget.Holo.ActionButton.Overflow">
         <item name="android:src">@drawable/down_arrow_resized</item>
     </style>
+
+    <style name="EditTextDefault" parent="">
+        <item name="android:fontFamily">@font/champagnebold</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="TextViewHeaderDefault" parent="">
+        <item name="android:fontFamily">@font/theboldfont</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="TextViewBodyDefault" parent="">
+        <item name="android:fontFamily">@font/champagnebold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="EditTextWhite" parent="">
+        <item name="android:fontFamily">@font/champagnebold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">@color/white</item>
+    </style>
+
+    <style name="TextViewHeaderWhite" parent="">
+        <item name="android:fontFamily">@font/theboldfont</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="TextViewBodyWhite" parent="">
+        <item name="android:fontFamily">@font/champagnebold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="WhiteButtonDefault" parent="">
+        <item name="android:background">@drawable/btn_rounded_white</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/theboldfont</item>
+        <item name="android:textColor">@color/defaultButtonColor</item>
+    </style>
+
+    <style name="CyanButtonDefault" parent="">
+        <item name="android:background">@drawable/btn_rounded</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/theboldfont</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
