--- a/SMPv2/app/src/main/res/layout/activity_login.xml
+++ b/SMPv2/app/src/main/res/layout/activity_login.xml
@@ -17,6 +17,7 @@
         android:layout_marginEnd="87sp"
         android:ems="10"
         android:inputType="text"
+        android:theme="@style/EditTextWhite"
         app:layout_constraintBottom_toTopOf="@+id/postalEditText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/emailTextView"
@@ -34,6 +35,7 @@
         android:layout_marginBottom="30dp"
         android:ems="10"
         android:inputType="textPassword"
+        android:theme="@style/EditTextWhite"
         app:layout_constraintBottom_toTopOf="@+id/submitButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -51,6 +53,7 @@
         android:layout_marginBottom="70dp"
         android:onClick="login"
         android:text="Submit"
+        android:textSize="22sp"
         android:fontFamily="@font/theboldfont"
         android:textColor="@color/defaultButtonColor"
         android:background="@drawable/btn_rounded_white"
