--- a/SMPv2/app/src/main/res/layout/activity_signup.xml
+++ b/SMPv2/app/src/main/res/layout/activity_signup.xml
@@ -18,8 +18,9 @@
         android:layout_marginEnd="22dp"
         android:layout_marginBottom="25dp"
         android:text="Username"
+        android:theme="@style/EditTextWhite"
         android:fontFamily="@font/champagnebold"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/passwordTextView"
         app:layout_constraintEnd_toStartOf="@+id/usernameEditText"
@@ -38,6 +39,7 @@
         android:layout_marginEnd="29dp"
         android:ems="10"
         android:inputType="textPassword"
+        android:theme="@style/EditTextWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/passwordTextView"
         app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />
@@ -87,6 +89,7 @@
         android:layout_toEndOf="@+id/passwordTextView"
         android:ems="10"
         android:inputType="textPassword"
+        android:theme="@style/EditTextWhite"
         app:layout_constraintBottom_toTopOf="@+id/signupButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -104,7 +107,7 @@
         android:layout_toStartOf="@+id/logoImageView"
         android:text="Password"
         android:fontFamily="@font/champagnebold"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/confirmTextView"
         app:layout_constraintEnd_toStartOf="@+id/passwordEditText"
@@ -141,7 +144,7 @@
         android:layout_marginTop="29dp"
         android:text="Confirm Password"
         android:fontFamily="@font/champagnebold"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textColor="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/confirmEditText"
         app:layout_constraintStart_toStartOf="parent"
@@ -158,6 +161,7 @@
         android:layout_marginTop="48dp"
         android:layout_marginEnd="60dp"
         android:ems="10"
+        android:theme="@style/EditTextWhite"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/addressTextView"
