--- a/SMPv2/app/src/main/res/values/styles.xml
+++ b/SMPv2/app/src/main/res/values/styles.xml
@@ -39,6 +39,7 @@
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textColorHint">@color/white</item>
+        <item name="android:editTextColor">@color/white</item>
     </style>
 
     <style name="TextViewHeaderWhite" parent="">
