--- a/SMPv2/app/src/main/res/layout/activity_admin_dashboard.xml
+++ b/SMPv2/app/src/main/res/layout/activity_admin_dashboard.xml
@@ -57,12 +57,14 @@
         android:text="@string/admin_business_information"
         android:textSize="20sp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="10dp" />\
+        android:layout_marginBottom="10dp"/>\
     </LinearLayout>
     <ListView
         android:id="@+id/businessListView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:listSelector="@color/darkBlue"
+        android:background="@color/darkBlue">
     </ListView>
 
 
