--- a/SMPv2/app/src/main/res/layout/activity_business_dashboard.xml
+++ b/SMPv2/app/src/main/res/layout/activity_business_dashboard.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".BusinessDashboard"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
 
     <include
@@ -83,14 +84,16 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="horizontal">
 
         <ListView
             android:id="@+id/lvBusinessPromotions"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:listSelector="@color/selectedColor"></ListView>
+            android:listSelector="@color/darkBlue"
+            android:background="@color/darkBlue"
+            ></ListView>
 
 
     </LinearLayout>
