--- a/SMPv2/app/src/main/res/layout/list_userpoints.xml
+++ b/SMPv2/app/src/main/res/layout/list_userpoints.xml
@@ -46,11 +46,11 @@
     <ProgressBar
         android:id="@+id/tierProgress"
         style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:progressDrawable="@drawable/progressbar"
         android:layout_marginTop="0dp"
-        android:layout_marginEnd="0dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp"/>
 
