Fixed selecting promo colour on business dashboard

--- a/SMPv2/app/src/main/res/layout/activity_admin_dashboard.xml
+++ b/SMPv2/app/src/main/res/layout/activity_admin_dashboard.xml
@@ -62,9 +62,7 @@
     <ListView
         android:id="@+id/businessListView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:listSelector="@color/darkBlue"
-        android:background="@color/darkBlue">
+        android:layout_height="wrap_content">
     </ListView>
 
 
