--- a/SMPv2/app/src/main/res/layout/activity_business_dashboard.xml
+++ b/SMPv2/app/src/main/res/layout/activity_business_dashboard.xml
@@ -91,9 +91,9 @@
             android:id="@+id/lvBusinessPromotions"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:listSelector="@color/darkBlue"
-            android:background="@color/darkBlue"
-            ></ListView>
+            android:listSelector="@color/selectedColor">
+
+        </ListView>
 
 
     </LinearLayout>
