--- a/SMPv2/app/src/main/res/layout/activity_business_settings.xml
+++ b/SMPv2/app/src/main/res/layout/activity_business_settings.xml
@@ -144,6 +144,7 @@
         android:fontFamily="@font/theboldfont"
         android:onClick="updateSettings"
         android:text="Update"
+        android:textSize="18sp"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.84"
