--- a/SMPv2/app/src/main/res/layout/activity_business_signup.xml
+++ b/SMPv2/app/src/main/res/layout/activity_business_signup.xml
@@ -5,14 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SignupActivity">
+    tools:context=".SignupActivity"
+    android:background="@color/defaultButtonColor">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,8 +18,7 @@
         <ImageView
             android:id="@+id/logoImageView"
             android:layout_width="match_parent"
-            android:layout_height="132dp"
-            android:layout_marginTop="20dp"
+            android:layout_height="wrap_content"
             app:srcCompat="@drawable/logo3" />
 
     </LinearLayout>
@@ -40,7 +34,8 @@
             android:layout_width="103dp"
             android:layout_height="35dp"
             android:paddingRight="30dp"
-            android:text="Business Name" />
+            android:text="Business Name"
+            android:theme="@style/TextViewBodyWhite"/>
 
         <EditText
             android:id="@+id/businessNameEditText"
@@ -48,7 +43,8 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
             android:ems="10"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            android:theme="@style/EditTextWhite"/>
 
     </LinearLayout>
 
@@ -63,7 +59,8 @@
             android:layout_width="94dp"
             android:layout_height="46dp"
             android:paddingRight="17dp"
-            android:text="Business Address" />
+            android:text="Business Address"
+            android:theme="@style/TextViewBodyWhite"/>
 
         <EditText
             android:id="@+id/businessAddressEditText"
@@ -72,7 +69,8 @@
             android:layout_marginLeft="7dp"
             android:ems="10"
             android:inputType="textPersonName"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            android:theme="@style/EditTextWhite"/>
     </LinearLayout>
 
     <LinearLayout
@@ -87,6 +85,7 @@
             android:layout_marginTop="15dp"
             android:gravity="center"
             android:onClick="businessRegister"
+            android:theme="@style/WhiteButtonDefault"
             android:text="Finish Signup" />
 
     </LinearLayout>
