--- a/SMPv2/app/src/main/res/layout/activity_detailed_description.xml
+++ b/SMPv2/app/src/main/res/layout/activity_detailed_description.xml
@@ -42,6 +42,16 @@
         />
 
 
+    <ImageView
+        android:layout_marginTop="10dp"
+        android:id="@+id/qrCodeImageView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:maxHeight="200dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+        android:layout_marginBottom="10dp"/>
+
 </LinearLayout>
 
 
