--- a/SMPv2/app/src/main/res/layout/add_promotion_dialogue.xml
+++ b/SMPv2/app/src/main/res/layout/add_promotion_dialogue.xml
@@ -67,12 +67,40 @@
         android:layout_height="100dp"
         android:onClick="uploadImage"
         android:src="@drawable/insert_image_here_" />
+    <TextView
+        android:id="@+id/addTagTextView"
+        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:theme="@style/TextViewHeaderWhite"
+        android:text="Tags:"
+        android:layout_marginTop="10dp"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center"></LinearLayout>
+        android:gravity="center">
+
+        <me.originqiu.library.EditTag
+            android:id="@+id/edit_tag_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:autofillHints="Enter tags here..."
+            />
+
+        <Button
+            android:id="@+id/buttonAddTag"
+            android:onClick="addTag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:theme="@style/WhiteButtonDefault"
+            android:text="Add" />
+
+    </LinearLayout>
+
+
+
     <Button
         android:id="@+id/buttonAddPromotion"
         android:layout_width="wrap_content"
