--- a/SMPv2/app/src/main/res/layout/activity_analytics.xml
+++ b/SMPv2/app/src/main/res/layout/activity_analytics.xml
@@ -29,7 +29,9 @@
             android:textSize="30sp"
             android:textColor="@color/defaultButtonColor"
             android:text="@string/analytics_pie"
-            android:visibility="gone">
+            android:visibility="gone"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp">
         </TextView>
     </LinearLayout>
 
@@ -47,7 +49,9 @@
             android:textSize="30sp"
             android:textColor="@color/defaultButtonColor"
             android:text="@string/analytics_line"
-            android:visibility="gone">
+            android:visibility="gone"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp">
         </TextView>
     </LinearLayout>
 
@@ -65,7 +69,9 @@
             android:textSize="30sp"
             android:textColor="@color/defaultButtonColor"
             android:text="@string/analytics_bar"
-            android:visibility="gone">
+            android:visibility="gone"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp">
         </TextView>
     </LinearLayout>
 
