--- a/SMPv2/app/src/main/res/layout/activity_business_dashboard.xml
+++ b/SMPv2/app/src/main/res/layout/activity_business_dashboard.xml
@@ -24,6 +24,15 @@
         android:orientation="horizontal"
         android:layout_marginBottom="20dp">
 
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/scanBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/defaultButtonColor"
+            android:onClick="openQRScanner"
+            android:src="@drawable/qr_scan_icon"
+            app:borderWidth="0dp"/>
+
         <Button
             android:id="@+id/addBtn"
             android:layout_width="wrap_content"
@@ -97,8 +106,6 @@
 
 
     </LinearLayout>
-
-
 
 
 </LinearLayout>
