--- a/SMPv2/app/src/main/res/layout/add_promotion_dialogue.xml
+++ b/SMPv2/app/src/main/res/layout/add_promotion_dialogue.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/defaultButtonColor">
+    android:background="@color/defaultButtonColor"
+    android:id="@+id/add_promotion_dialogue">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -86,16 +87,8 @@
             android:id="@+id/edit_tag_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:autofillHints="Enter tags here..."
             />
 
-        <Button
-            android:id="@+id/buttonAddTag"
-            android:onClick="addTag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:theme="@style/WhiteButtonDefault"
-            android:text="Add" />
 
     </LinearLayout>
 
