--- a/SMPv2/app/src/main/res/layout/list_promotions.xml
+++ b/SMPv2/app/src/main/res/layout/list_promotions.xml
@@ -10,6 +10,7 @@ android:layout_height="match_parent"
         android:layout_width="110dp"
         android:layout_height="110dp"
         android:src="@drawable/insert_image_here_"
+        android:background="@color/white"
         />
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -25,7 +26,7 @@ android:layout_height="match_parent"
             android:fontFamily="@font/theboldfont"
             android:textSize="18sp"
             android:theme="@style/TextViewHeaderDefault"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="8dp"/>
 
         <TextView
             android:id="@+id/shortPromotionDetails"
@@ -33,7 +34,7 @@ android:layout_height="match_parent"
             android:layout_height="match_parent"
             android:fontFamily="@font/champagnebold"
             android:textSize="16sp"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="8dp"/>
 
         <TextView
             android:id= "@+id/promotionMinimumPoints"
