--- a/SMPv2/app/src/main/res/layout/list_promotions.xml
+++ b/SMPv2/app/src/main/res/layout/list_promotions.xml
@@ -33,8 +33,7 @@ android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fontFamily="@font/champagnebold"
-            android:textSize="16sp"
-            android:layout_marginBottom="8dp"/>
+            android:textSize="16sp" />
 
         <TextView
             android:id= "@+id/promotionMinimumPoints"
