--- a/SMPv2/app/src/main/res/values/google_maps_api.xml
+++ b/SMPv2/app/src/main/res/values/google_maps_api.xml
@@ -20,5 +20,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCoC7XQfq_mOD-NGth3gqDAFBok-HdDadk</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false"></string>
 </resources>
